修正預約課程bug